--- a/configure.ac
+++ b/configure.ac
@@ -31,8 +31,8 @@ PKG_CHECK_MODULES(
         MYSQL, libmysqlclient, ,
         [AC_CHECK_PROG(MYSQL_CONFIG, mysql_config, mysql_config, false)
             if test "x$MYSQL_CONFIG" = "xfalse" ; then
-               MYSQL_CFLAGS=-IC:/msys64/mingw64/include/mysql/ -march=x86-64 -mtune=generic -O2 -pipe -Wunused -Wno-uninitialized
-               MYSQL_LIBS=-LC:/msys64/mingw64/lib/ -lmysqlclient
+               MYSQL_CFLAGS="-IC:/msys64/mingw64/include/mysql/ -march=x86-64 -mtune=generic -O2 -pipe -Wunused -Wno-uninitialized"
+               MYSQL_LIBS="-LC:/msys64/mingw64/lib/ -lmysqlclient"
             else
                 MYSQL_CFLAGS=$(${MYSQL_CONFIG} --cflags)
                 MYSQL_LIBS=$(${MYSQL_CONFIG} --libs)
