--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,5 @@
 include $(top_srcdir)/common.mk
-
-ACLOCAL_AMFLAGS = -I m4
+SUBDIRS = src po
 dist_doc_DATA = README.md
 
-SUBDIRS = src
+ACLOCAL_AMFLAGS = -I m4
