--- a/src/editor/Makefile.am
+++ b/src/editor/Makefile.am
@@ -22,11 +22,11 @@ CLEANFILES = \
 
 GLIB_BUILD_RESOURCE = glib-compile-resources
 RESOURCES_DEP= \
-	$(srcdir)/ui/OsuxEditorWindow.glade \
-	$(srcdir)/ui/OsuxEditorPopover.glade \
-	$(srcdir)/ui/OsuxBeatmapAdjustments.glade \
-	$(srcdir)/ui/OsuxCloseLabel.glade \
-	$(srcdir)/ui/OsuxFileFilterMusic.glade
+	$(srcdir)/ui/OsuxEditorWindow.ui \
+	$(srcdir)/ui/OsuxEditorPopover.ui \
+	$(srcdir)/ui/OsuxBeatmapAdjustments.ui \
+	$(srcdir)/ui/OsuxCloseLabel.ui \
+	$(srcdir)/ui/OsuxFileFilterMusic.ui
 
 $(srcdir)/editor.gresources.xml: $(RESOURCES_DEP)
 # technically nothing can be 'rebuilt' here so just update modification time
