editor cmakelist.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,9 @@ set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/install)
 find_package(Sanitizers)
 
 add_definitions(-DDEBUG=1)
+add_definitions(-DPACKAGE="osux")
+add_definitions(-DLOCALEDIR="${CMAKE_INSTALL_PREFIX}/share/locale/")
+
 add_subdirectory(src)
 
 # stackoverflow.com/questions/8934295/
