--- a/src/lib/beatmap/Makefile.am
+++ b/src/lib/beatmap/Makefile.am
@@ -10,6 +10,7 @@ libosux_beatmap_la_SOURCES = \
 	util.c \
 	color.c \
 	hitobject.c \
+	hitobject_taiko.c \
 	hitsound.h \
 	timingpoint.c \
 	taiko_autoconvert.c
