--- a/src/editor/Makefile.am
+++ b/src/editor/Makefile.am
@@ -3,12 +3,16 @@ include $(top_srcdir)/common.mk
 bin_PROGRAMS = osux_editor
 osux_editor_SOURCES = \
 	main.c \
-	app.c \
-	app_win.c \
-	popsearch.c \
-	closelabel.c \
-	adjustment.c \
-	beatmap.c
+	edosu-app.c \
+	edosu-win.c \
+	edosu-close-lbl.c \
+	edosu-adjust.c \
+	edosu-beatmap.c \
+	edosu-beatmap-load.c \
+	edosu-properties.c \
+	edosu-palette.c \
+	edosu-view.c \
+	edosu-inspector.c
 
 nodist_osux_editor_SOURCES = \
 	resources.c \
@@ -22,12 +26,15 @@ CLEANFILES = \
 
 GLIB_BUILD_RESOURCE = glib-compile-resources
 RESOURCES_DEP= \
-	$(srcdir)/ui/OsuxEditorWindow.ui \
-	$(srcdir)/ui/OsuxEditorPopover.ui \
-	$(srcdir)/ui/OsuxBeatmapAdjustments.ui \
-	$(srcdir)/ui/OsuxCloseLabel.ui \
-	$(srcdir)/ui/OsuxFileFilterMusic.ui \
-	$(srcdir)/ui/OsuxFileFilterOsu.ui
+	$(srcdir)/ui/EdosuWindow.glade \
+	$(srcdir)/ui/EdosuView.glade \
+	$(srcdir)/ui/EdosuInspector.glade \
+	$(srcdir)/ui/EdosuPalette.glade \
+	$(srcdir)/ui/EdosuProperties.glade \
+	$(srcdir)/ui/EdosuBeatmapAdjustments.glade \
+	$(srcdir)/ui/EdosuCloseLabel.glade \
+	$(srcdir)/ui/EdosuFileFilterMusic.glade \
+	$(srcdir)/ui/EdosuFileFilterOsu.glade
 
 $(srcdir)/editor.gresources.xml: $(RESOURCES_DEP)
 # technically nothing can be 'rebuilt' here so just update modification time
