--- a/src/editor/Makefile.am
+++ b/src/editor/Makefile.am
@@ -13,6 +13,7 @@ edosu_SOURCES = \
 	edosu-palette.c \
 	edosu-view.c \
 	edosu-inspector.c \
+	glarea-error.c \
 	edosu-gl.c
 
 nodist_edosu_SOURCES = \
@@ -35,7 +36,9 @@ RESOURCES_DEP= \
 	$(srcdir)/ui/EdosuBeatmapAdjustments.glade \
 	$(srcdir)/ui/EdosuCloseLabel.glade \
 	$(srcdir)/ui/EdosuFileFilterMusic.glade \
-	$(srcdir)/ui/EdosuFileFilterOsu.glade
+	$(srcdir)/ui/EdosuFileFilterOsu.glade \
+	$(srcdir)/glarea-fragment.glsl \
+	$(srcdir)/glarea-vertex.glsl
 
 $(srcdir)/editor.gresources.xml: $(RESOURCES_DEP)
 # technically nothing can be 'rebuilt' here so just update modification time
