cairo circular spline

--- a/src/editor/Makefile.am
+++ b/src/editor/Makefile.am
@@ -13,9 +13,7 @@ edosu_SOURCES = \
 	edosu-palette.c \
 	edosu-view.c \
 	edosu-inspector.c \
-	glarea-error.c \
-	edosu-circle.c \
-	edosu-gl.c
+	bezier.c
 
 nodist_edosu_SOURCES = \
 	resources.c \
@@ -37,9 +35,7 @@ RESOURCES_DEP= \
 	$(srcdir)/ui/EdosuBeatmapAdjustments.glade \
 	$(srcdir)/ui/EdosuCloseLabel.glade \
 	$(srcdir)/ui/EdosuFileFilterMusic.glade \
-	$(srcdir)/ui/EdosuFileFilterOsu.glade \
-	$(srcdir)/fragment.glsl \
-	$(srcdir)/vertex.glsl
+	$(srcdir)/ui/EdosuFileFilterOsu.glade
 
 $(srcdir)/editor.gresources.xml: $(RESOURCES_DEP)
 # technically nothing can be 'rebuilt' here so just update modification time
