--- a/src/taikorank/yaml/pattern_cst.yaml
+++ b/src/taikorank/yaml/pattern_cst.yaml
@@ -6,9 +6,9 @@
 # y is the pattern star rating
 vect_pattern_scale_length: 3
 vect_pattern_scale_x1: 0.
-vect_pattern_scale_y1: 4.
+vect_pattern_scale_y1: 3.5
 vect_pattern_scale_x2: 0.6
-vect_pattern_scale_y2: 1.
+vect_pattern_scale_y2: 2.
 vect_pattern_scale_x3: 1.01
 vect_pattern_scale_y3: 1.
 
@@ -21,9 +21,9 @@ vect_pattern_scale_y3: 1.
 vect_influence_length: 4
 vect_influence_x1: 0
 vect_influence_y1: 1.
-vect_influence_x2: 30000. # 30s
+vect_influence_x2: 30000.
 vect_influence_y2: 0.8
-vect_influence_x3: 60000. # 1min
+vect_influence_x3: 60000.
 vect_influence_y3: 0.
 vect_influence_x4: 3600000.
 vect_influence_y4: 0.
