--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,3 +1,3 @@
 include $(top_srcdir)/common.mk
 
-SUBDIRS = thirdparty lib tools taikorank editor
+SUBDIRS = thirdparty lib tools taikorank editor viewer
