--- a/src/lib/database/Makefile.am
+++ b/src/lib/database/Makefile.am
@@ -1,10 +1,15 @@
 include $(top_srcdir)/common.mk
 
-BUILT_SOURCES = beatmap_db.sql.h beatmap_db.sql.c
+BUILT_SOURCES = beatmap_db.sql.c beatmap_db.sql.h
+
 noinst_LTLIBRARIES = libosux_db.la
 libosux_db_la_SOURCES = \
 	beatmap_database.c database.c \
-	beatmap_db.sql.c beatmap_db.sql.h beatmap_db.sql
+	beatmap_db.sql
+
+nodist_libosux_db_la_SOURCES = \
+	beatmap_db.sql.c \
+	beatmap_db.sql.h
 
 beatmap_db.sql.c beatmap_db.sql.h:
 	$(top_srcdir)/scripts/embedder2.py $(srcdir)/beatmap_db.sql
